# the_saucy_pages

./: README.md
backend/: Cargo.toml  README.md
backend/migrations/: 20260110174802_CREATE_TABLE_recipes.sql
backend/src/: api.rs  main.rs
backend/src/controllers/: recipe.rs
backend/src/models/: recipe.rs
backend/src/repositories/: recipe.rs
backend/src/routes/: recipes.rs
backend/src/services/: recipe.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/api/: recipes.ts
frontend/src/components/: app.svelte
frontend/src/components/recipes/: create-form.svelte
frontend/src/models/: recipe.ts
